[package]
name = "glb-to-ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = {version = "1.37.0", features = ["full"]}
tokio-rustls = {version = "0.26", default-features = false, features = ["ring", "logging", "tls12"]}
rustls-pemfile = "2.1.2"